# redirector

./: .gitignore  Cargo.toml  README.md  build_appimage.sh  flake.nix
data/: redirector.desktop
src/: automations.rs  config.rs  main.rs  pipeline.rs  url_data.rs
src/modules/: clearurls.rs  mod.rs  open.rs  pattern.rs
