[package]
name = "redirector"
version = "0.1.0"
edition = "2021"
description = "A URL redirector/cleaner for Linux desktop (GTK4)"

[dependencies]
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_4"] }
glib = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }


